fix contact on mobile

--- a/W3_Band/css/responsive.css
+++ b/W3_Band/css/responsive.css
@@ -10,8 +10,11 @@
 
 /*Mobile*/
 @media (max-width: 740px) {
+  .s-full-width{
+    width: 100% !important;
+  }
   .s-col-full{
-    width: 100%;
+    width: 100% !important;
   }
   #nav{
     display: block;
@@ -50,6 +53,12 @@
   }
   #content .member-img{
     width: 60%;
+  }
+  .contact-form{
+    margin-top: 16px;
+  }
+  .s-mt-8{
+    margin-top: 8px;
   }
 
 }
